# QuickStockBot

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build_exe.py  config.yaml  jest.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt
bot/: .env.example  build.spec  config.py  pyproject.toml  run.py
bot/alpaca/: __init__.py  client.py  config.py  fake_client.py
bot/db/: connection.ts  index.ts  init.ts  seed.ts
bot/db/migrations/: 001_initial_schema.ts  002_section04_ta.ts  003_section05_scanner.ts  003_section06_execution.ts  004_section07_learning.ts  004_section08_control.ts  005_section18_giveback.ts  index.ts  runner.ts
bot/db/repositories/: dailyEfficiencyRepository.ts  listRepository.ts  logRepository.ts  mlSampleRepository.ts  orderRepository.ts  settingsRepository.ts  tickerProfitStatsRepository.ts  tickerRepository.ts  tradeRepository.ts
bot/news/: aggregator.py  models.py  sentiment.py  service.py
bot/news/providers/: alpaca.py  base.py  benzinga.py  finnhub.py  newsapi.py
bot/src/bot/: __init__.py  models.py
bot/src/bot/alpaca/: __init__.py  client.py  config.py  fake_client.py
bot/src/bot/control/: __init__.py  connection.py  db.py  handlers.py  local_api.py  relay_client.py
bot/src/bot/engine/: __init__.py  circuit_breaker.py  config.py  exits.py  gate.py  session.py  sizing.py
bot/src/bot/learning/: __init__.py  config.py  efficiency.py  features.py  labeling.py  model.py  prior_profit.py
bot/src/bot/license/: validator.py
bot/src/bot/news/: aggregator.py  config.py  models.py  sentiment.py  service.py
bot/src/bot/news/providers/: alpaca.py  base.py  benzinga.py  finnhub.py  newsapi.py
bot/src/bot/scanner/: __init__.py  config.py  filters.py  fundamentals.py  leaders.py  models.py  scanner.py  window.py
bot/src/bot/ta/: __init__.py  config.py  helpers.py  macd.py  models.py  patterns.py  scoring.py  similarity.py
bot/tests/: test_placeholder.py
bot/tests/alpaca/: test_alpaca_client.py  test_config.py  test_fake_client.py
bot/tests/alpaca/cassettes/: get_account.json  get_latest_quote.json  get_news.json  get_order_filled.json  list_positions.json  submit_order.json
bot/tests/control/: conftest.py  mock_relay.py  test_daily_pl.py  test_handlers.py  test_relay_client.py  test_settings_override.py
bot/tests/engine/: conftest.py  test_circuit_breaker.py  test_exits.py  test_gate.py  test_giveback.py  test_session.py  test_sizing.py
bot/tests/learning/: test_efficiency.py  test_features.py  test_labeling.py  test_model.py  test_prior_profit.py
bot/tests/license/: test_validator.py
bot/tests/news/: test_aggregator.py  test_providers.py  test_sentiment.py
bot/tests/scanner/: conftest.py  test_filters.py  test_fundamentals.py  test_leaders.py  test_scanner.py  test_window.py
bot/tests/ta/: conftest.py  test_helpers.py  test_macd.py  test_patterns.py  test_scoring.py  test_similarity.py
docs/: operator-runbook.md  user-setup-guide.md
installer/: .env.example  README.md  build.spec  pyproject.toml
installer/tests/: test_config_writer.py  test_reachability.py  test_smoke.py  test_validator.py
installer/wizard/: __main__.py  config_writer.py  html_wizard.py  reachability.py  server.py  validator.py
relay/: .env.example  Dockerfile  nixpacks.toml  package-lock.json  package.json  railway.toml  tsconfig.json  vitest.config.ts
scripts/: build_dist.bat  build_dist.sh  manual_verify_alpaca.py  record_bars.py  verify_news.py
shared/: package-lock.json  package.json
tests/: test_calendar.py  test_engine.py  test_execution.py  test_journal.py  test_mcp_robinhood.py  test_patterns.py  test_record_bars.py  test_replay.py  test_risk.py
trader/: __init__.py  alpaca_data.py  anthropic_select.py  config.py  engine.py  execution.py  indicators.py  journal.py  lock.py  logging_setup.py  main.py  market_calendar.py  mcp_robinhood.py  models.py  patterns.py  replay.py  reporting.py  risk.py  selftest.py
web/: .env.example  .gitignore  Dockerfile  next.config.ts  package.json  (+6 more)
(+162 files in other folders)
