[project]
name = "quickstockbot-bot"
version = "0.1.0"
description = "QuickStockBot trading engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "scikit-learn>=1.9.0",
    "tenacity>=8.3",
    "uvicorn>=0.28.0",
    "websockets>=12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bot"]

[dependency-groups]
dev = [
    "anyio>=4.3",
    "black>=24",
    "mypy>=1.9",
    "pytest>=8",
    "pytest-anyio>=0.0.0",
    "respx>=0.21",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "finbert: marks tests requiring the FinBERT model download (deselect with '-m not finbert')",
]
