[project]
name = "quickstockbot-installer"
version = "0.1.0"
description = "QuickStockBot one-click setup wizard"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "httpx>=0.27",
    "websockets>=12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wizard"]

[dependency-groups]
dev = [
    "anyio>=4.3",
    "black>=24",
    "mypy>=1.9",
    "pyinstaller>=6.0",
    "pytest>=8",
    "pytest-anyio>=0.0.0",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
